--- a/analysis/SebiUnipan/milestone1.ipynb
+++ b/analysis/SebiUnipan/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,13 +38,15 @@
        "      <th>Sex</th>\n",
        "      <th>Capital Gain</th>\n",
        "      <th>Capital Loss</th>\n",
-       "      <th>Hours per Week</th>\n",
+       "      <th>Hours/Week</th>\n",
        "      <th>Native Country</th>\n",
+       "      <th>Yearly Income</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
+       "      <th>0</th>\n",
+       "      <td>39</td>\n",
        "      <td>State-gov</td>\n",
        "      <td>77516</td>\n",
        "      <td>Bachelors</td>\n",
@@ -61,7 +63,8 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
        "      <td>Self-emp-not-inc</td>\n",
        "      <td>83311</td>\n",
        "      <td>Bachelors</td>\n",
@@ -78,7 +81,8 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
        "      <td>Private</td>\n",
        "      <td>215646</td>\n",
        "      <td>HS-grad</td>\n",
@@ -95,7 +99,8 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
+       "      <th>3</th>\n",
+       "      <td>53</td>\n",
        "      <td>Private</td>\n",
        "      <td>234721</td>\n",
        "      <td>11th</td>\n",
@@ -112,7 +117,8 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
+       "      <th>4</th>\n",
+       "      <td>28</td>\n",
        "      <td>Private</td>\n",
        "      <td>338409</td>\n",
        "      <td>Bachelors</td>\n",
@@ -144,9 +150,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>32556</th>\n",
+       "      <td>27</td>\n",
        "      <td>Private</td>\n",
        "      <td>257302</td>\n",
        "      <td>Assoc-acdm</td>\n",
@@ -163,7 +171,8 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
+       "      <th>32557</th>\n",
+       "      <td>40</td>\n",
        "      <td>Private</td>\n",
        "      <td>154374</td>\n",
        "      <td>HS-grad</td>\n",
@@ -180,7 +189,8 @@
        "      <td>&gt;50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
+       "      <th>32558</th>\n",
+       "      <td>58</td>\n",
        "      <td>Private</td>\n",
        "      <td>151910</td>\n",
        "      <td>HS-grad</td>\n",
@@ -197,7 +207,8 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>32559</th>\n",
+       "      <td>22</td>\n",
        "      <td>Private</td>\n",
        "      <td>201490</td>\n",
        "      <td>HS-grad</td>\n",
@@ -214,7 +225,8 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
+       "      <th>32560</th>\n",
+       "      <td>52</td>\n",
        "      <td>Self-emp-inc</td>\n",
        "      <td>287927</td>\n",
        "      <td>HS-grad</td>\n",
@@ -232,66 +244,66 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32561 rows × 14 columns</p>\n",
+       "<p>32561 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Age   Workclass  Final Weight   Education  \\\n",
-       "39          State-gov       77516     Bachelors          13   \n",
-       "50   Self-emp-not-inc       83311     Bachelors          13   \n",
-       "38            Private      215646       HS-grad           9   \n",
-       "53            Private      234721          11th           7   \n",
-       "28            Private      338409     Bachelors          13   \n",
-       "..                ...         ...           ...         ...   \n",
-       "27            Private      257302    Assoc-acdm          12   \n",
-       "40            Private      154374       HS-grad           9   \n",
-       "58            Private      151910       HS-grad           9   \n",
-       "22            Private      201490       HS-grad           9   \n",
-       "52       Self-emp-inc      287927       HS-grad           9   \n",
+       "       Age          Workclass  Final Weight    Education  Education-Num  \\\n",
+       "0       39          State-gov         77516    Bachelors             13   \n",
+       "1       50   Self-emp-not-inc         83311    Bachelors             13   \n",
+       "2       38            Private        215646      HS-grad              9   \n",
+       "3       53            Private        234721         11th              7   \n",
+       "4       28            Private        338409    Bachelors             13   \n",
+       "...    ...                ...           ...          ...            ...   \n",
+       "32556   27            Private        257302   Assoc-acdm             12   \n",
+       "32557   40            Private        154374      HS-grad              9   \n",
+       "32558   58            Private        151910      HS-grad              9   \n",
+       "32559   22            Private        201490      HS-grad              9   \n",
+       "32560   52       Self-emp-inc        287927      HS-grad              9   \n",
        "\n",
-       "          Education-Num      Marital Status      Occupation  Relationship  \\\n",
-       "39        Never-married        Adm-clerical   Not-in-family         White   \n",
-       "50   Married-civ-spouse     Exec-managerial         Husband         White   \n",
-       "38             Divorced   Handlers-cleaners   Not-in-family         White   \n",
-       "53   Married-civ-spouse   Handlers-cleaners         Husband         Black   \n",
-       "28   Married-civ-spouse      Prof-specialty            Wife         Black   \n",
-       "..                  ...                 ...             ...           ...   \n",
-       "27   Married-civ-spouse        Tech-support            Wife         White   \n",
-       "40   Married-civ-spouse   Machine-op-inspct         Husband         White   \n",
-       "58              Widowed        Adm-clerical       Unmarried         White   \n",
-       "22        Never-married        Adm-clerical       Own-child         White   \n",
-       "52   Married-civ-spouse     Exec-managerial            Wife         White   \n",
+       "            Marital Status          Occupation    Relationship    Race  \\\n",
+       "0            Never-married        Adm-clerical   Not-in-family   White   \n",
+       "1       Married-civ-spouse     Exec-managerial         Husband   White   \n",
+       "2                 Divorced   Handlers-cleaners   Not-in-family   White   \n",
+       "3       Married-civ-spouse   Handlers-cleaners         Husband   Black   \n",
+       "4       Married-civ-spouse      Prof-specialty            Wife   Black   \n",
+       "...                    ...                 ...             ...     ...   \n",
+       "32556   Married-civ-spouse        Tech-support            Wife   White   \n",
+       "32557   Married-civ-spouse   Machine-op-inspct         Husband   White   \n",
+       "32558              Widowed        Adm-clerical       Unmarried   White   \n",
+       "32559        Never-married        Adm-clerical       Own-child   White   \n",
+       "32560   Married-civ-spouse     Exec-managerial            Wife   White   \n",
        "\n",
-       "       Race    Sex   Capital Gain   Capital Loss  Hours per Week  \\\n",
-       "39     Male   2174              0             40   United-States   \n",
-       "50     Male      0              0             13   United-States   \n",
-       "38     Male      0              0             40   United-States   \n",
-       "53     Male      0              0             40   United-States   \n",
-       "28   Female      0              0             40            Cuba   \n",
-       "..      ...    ...            ...            ...             ...   \n",
-       "27   Female      0              0             38   United-States   \n",
-       "40     Male      0              0             40   United-States   \n",
-       "58   Female      0              0             40   United-States   \n",
-       "22     Male      0              0             20   United-States   \n",
-       "52   Female  15024              0             40   United-States   \n",
+       "           Sex  Capital Gain  Capital Loss  Hours/Week  Native Country  \\\n",
+       "0         Male          2174             0          40   United-States   \n",
+       "1         Male             0             0          13   United-States   \n",
+       "2         Male             0             0          40   United-States   \n",
+       "3         Male             0             0          40   United-States   \n",
+       "4       Female             0             0          40            Cuba   \n",
+       "...        ...           ...           ...         ...             ...   \n",
+       "32556   Female             0             0          38   United-States   \n",
+       "32557     Male             0             0          40   United-States   \n",
+       "32558   Female             0             0          40   United-States   \n",
+       "32559     Male             0             0          20   United-States   \n",
+       "32560   Female         15024             0          40   United-States   \n",
        "\n",
-       "    Native Country  \n",
-       "39           <=50K  \n",
-       "50           <=50K  \n",
-       "38           <=50K  \n",
-       "53           <=50K  \n",
-       "28           <=50K  \n",
-       "..             ...  \n",
-       "27           <=50K  \n",
-       "40            >50K  \n",
-       "58           <=50K  \n",
-       "22           <=50K  \n",
-       "52            >50K  \n",
+       "      Yearly Income  \n",
+       "0             <=50K  \n",
+       "1             <=50K  \n",
+       "2             <=50K  \n",
+       "3             <=50K  \n",
+       "4             <=50K  \n",
+       "...             ...  \n",
+       "32556         <=50K  \n",
+       "32557          >50K  \n",
+       "32558         <=50K  \n",
+       "32559         <=50K  \n",
+       "32560          >50K  \n",
        "\n",
-       "[32561 rows x 14 columns]"
+       "[32561 rows x 15 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,6 +313,34 @@
     "df = pd.read_csv(\"../../data/raw/adult.data\")\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'script'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-d0ce308a0d7e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mscript\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mproject_functions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'script'"
+     ]
+    }
+   ],
+   "source": [
+    "from script import project_functions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
